--- a/notebooks/Figure_7.ipynb
+++ b/notebooks/Figure_7.ipynb
@@ -8,7 +8,7 @@
    "source": [
     "from flowmaps_data import geolayer, covid19, population\n",
     "import plotly.graph_objects as go\n",
-    "    \n",
+    "\n",
     "date = '2020-10-10'\n",
     "layer = 'cnig_provincias' # 'abs_09'\n",
     "ev = 'ES.covid_cpro' # '09.covid_abs'\n",
@@ -39,23 +39,6 @@
     "                      mapbox_center={\"lat\": 40.495178477814555, \"lon\": -3.717336960173357})\n",
     "fig.update_layout(margin={\"r\":0,\"t\":30,\"l\":0,\"b\":0})\n",
     "fig.show()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# fig = go.Figure(data=go.Scattergeo(\n",
-    "#         lon = df['long'],\n",
-    "#         lat = df['lat'],\n",
-    "#         text = df['text'],\n",
-    "#         mode = 'markers',\n",
-    "#         marker_color = df['cnt'],\n",
-    "#         ))\n",
-    "\n",
-    "go.Scattergeo?"
    ]
   },
   {
@@ -139,7 +122,7 @@
     "# Plot\n",
     "fig = go.Figure(go.Choroplethmapbox(geojson=geojson,\n",
     "                                        locations=covid_df['id'],\n",
-    "                                        z=covid_df['daily_cases'],\n",
+    "                                        z=covid_df['new_cases'],\n",
     "                                        colorscale=\"Reds\",\n",
     "                                        colorbar={'title': 'Daily cases'},\n",
     "                                        marker_opacity=0.8))\n",
@@ -150,13 +133,20 @@
     "fig.update_layout(margin={\"r\":0,\"t\":30,\"l\":0,\"b\":0})\n",
     "fig.show()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "flowmaps-env",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "flowmaps-env"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -168,7 +158,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.2"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
